--- a/index.html
+++ b/index.html
@@ -6,15 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/dd12bbf080.js" crossorigin="anonymous"></script>
-    <title>Devoir groupe 3</title>
+    <title>Booki</title>
 </head>
 <body>
     <header>
+        <section class="blocheadertext">
+            <section class="headertext">
+                <div class="booki">
+                    <h1>Booki</h1>
+                </div>
+                <div class="headerlist">
+                    <ul>
+                        <li>Hébergements</li>
+                        <li>Activités</li>
+                    </ul>
+                </div>
+            </section>
+
+                <div class="description">
+                    <p>Trouvez votre hébergement pour des vacances de rêve</p>
+                    <p>En plein centre-ville ou en plaine nature</p>
+                </div>
+        </section>
 
         <div class="search">
             <i class="fa-sharp fa-solid fa-location-dot"></i>
             <input type="text" placeholder="Marseille, France">
-            <button>Rechercher</button>
+            <button>Bookie</button>
         </div>
 
         <div class="nav">
@@ -35,7 +53,7 @@
     
     
     <main>
-        <section class="block">
+        <section class="blockheberger">
             <div class="titre">
                 <h1>Hébergement à Marseille</h1>
             </div>
@@ -121,6 +139,22 @@
             <div class="plus">
                 <p>Afficher plus</p>
             </div>
+        </section>
+
+        <section class="blockpopulaire">
+            <figure>
+                <img src="img/amina.jpg" alt="">
+                <figcaption>
+                    <p>Hôtel chez Amina</p>
+                    <p>Nuit à partir de 96€</p>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>                
+                    <i class="fa-solid fa-star"></i>                
+                </figcaption>
+            </figure>
+
         </section>
     </main>
 </body>
