--- a/index.html
+++ b/index.html
@@ -146,45 +146,46 @@
                     <h1>Les plus populaire</h1>
                 </div>
                 <i class="fa-solid fa-chart-line"></i>
-            <figure>
-                <img src="img/le_soleil.jpg" alt="">
-                <figcaption>
-                    <p>Hôtel Le soleil du matin</p>
-                    <p>Nuit à partir de 128€</p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>                
-                    <i class="fa-solid fa-star stargrey"></i>                
-                </figcaption>
-            </figure>
+                <section class="cards">
+                    <figure>
+                        <img src="img/le_soleil.jpg" alt="">
+                        <figcaption>
+                            <p>Hôtel Le soleil du matin</p>
+                            <p>Nuit à partir de 128€</p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>                
+                            <i class="fa-solid fa-star stargrey"></i>                
+                        </figcaption>
+                    </figure>
 
-            <figure>
-                <img src="img/au_coeur.jpg" alt="">
-                <figcaption>
-                    <p>Chambres d'hôtes Au coeur de l'eau</p>
-                    <p>Nuit à partir de 17€</p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>                
-                    <i class="fa-solid fa-star stargrey"></i>                
-                </figcaption>
-            </figure>
+                    <figure>
+                        <img src="img/au_coeur.jpg" alt="">
+                        <figcaption>
+                            <p>Chambres d'hôtes Au coeur de l'eau</p>
+                            <p>Nuit à partir de 17€</p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>                
+                            <i class="fa-solid fa-star stargrey"></i>                
+                        </figcaption>
+                    </figure>
 
-            <figure>
-                <img src="img/bleu_blanc.jpg" alt="">
-                <figcaption>
-                    <p>Hôtel Bleu et Blanc</p>
-                    <p>Nuit à partir de 68€</p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>                
-                    <i class="fa-solid fa-star stargrey"></i>                
-                </figcaption>
-            </figure>
-
+                    <figure>
+                        <img src="img/bleu_blanc.jpg" alt="">
+                        <figcaption>
+                            <p>Hôtel Bleu et Blanc</p>
+                            <p>Nuit à partir de 68€</p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>                
+                            <i class="fa-solid fa-star stargrey"></i>                
+                        </figcaption>
+                    </figure>
+                </section>
         </section>
     </main>
 </body>
