--- a/index.html
+++ b/index.html
@@ -221,5 +221,26 @@
             </section>
         </section>
     </main>
+
+    <footer>
+        <div>
+            <p>À propos</p>
+            <p>Fonctionnement du site</p>
+            <p>Conditions générales</p>
+            <p>Données et confidentialité</p>
+        </div>
+
+        <div>
+            <p>Nos hébergements</p>
+            <p>Charte qualité</p>
+            <p>Proposer votre hôtel</p>
+        </div>
+
+        <div>
+            <p>Assistance</p>
+            <p>Centre d'aide</p>
+            <p>Nous contacter</p>
+        </div>
+    </footer>
 </body>
 </html>
