--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/dd12bbf080.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Booki</title>
 </head>
 <body>
     <header>
 
-        <section class="blocheadertext">
-            <section class="headertext">
+        <div class="blocheadertext">
+            <div class="headertext">
                 <div class="booki">
-                    <h1>Booki</h1>
+                    <img src="img/Booki.png" alt="LogoBooki">
                 </div>
                 <div class="headerlist">
                     <ul>
@@ -22,25 +25,27 @@
                         <li>Activités</li>
                     </ul>
                 </div>
-            </section>
+            </div>
                 <div class="description">
                     <p>Trouvez votre hébergement pour des vacances de rêve</p>
                     <p>En plein centre-ville ou en plaine nature</p>
                 </div>
-        </section>
+        </div>
 
         <div class="search">
             <i class="fa-sharp fa-solid fa-location-dot"></i>
             <input type="text" placeholder="Marseille, France">
-            <button>Bookie</button>
+            <button>Rechercher</button>
         </div>
 
         <div class="nav">
-            <h1>Filtres</h1>
-            <p><i class="fa-sharp fa-solid fa-money-bill-wave"></i>Économique</p>
-            <p><i class="fa-sharp fa-solid fa-child-reaching"></i>Familial</p>
-            <p><i class="fa-sharp fa-solid fa-heart"></i>Romantique</p>
-            <p><i class="fa-sharp fa-solid fa-dog"></i>Animaux autorisés</p>
+            <p>Filtres</p>
+            <ul>
+                <li><i class="fa-sharp fa-solid fa-money-bill-wave"></i>Économique</li>
+                <li><i class="fa-sharp fa-solid fa-child-reaching"></i>Familial</li>
+                <li><i class="fa-sharp fa-solid fa-heart"></i>Romantique</li>
+                <li><i class="fa-sharp fa-solid fa-dog"></i>Animaux autorisés</li>
+            </ul>
         </div>
 
         <div class="text">
@@ -53,9 +58,9 @@
     <main>
         <section class="blockheberger">
             <div class="titre">
-                <h1>Hébergement à Marseille</h1>
+                <h2>Hébergement à Marseille</h2>
             </div>
-            <section class="cards1"> 
+            <div class="cards1"> 
                 <figure>
                     <img src="img/la_cannebiere.jpg" alt="">
                     <figcaption>
@@ -133,7 +138,7 @@
                         <i class="fa-solid fa-star"></i>                
                     </figcaption>
                 </figure>
-            </section>
+            </div>
                 <div class="plus">
                     <p>Afficher plus</p>
                 </div>
@@ -141,10 +146,10 @@
 
         <section class="blockpopulaire">
                 <div class="titre2">
-                    <h1>Les plus populaire</h1>
+                    <h2>Les plus populaire</h2>
                 </div>
                 <i class="fa-solid fa-chart-line"></i>
-                <section class="cards1">
+                <div class="cards1">
                     <figure>
                         <img src="img/le_soleil.jpg" alt="">
                         <figcaption>
@@ -183,14 +188,14 @@
                             <i class="fa-solid fa-star stargrey"></i>                
                         </figcaption>
                     </figure>
-                </section>
+                </div>
         </section>
 
         <section class="blockactiviter">
             <div class="titre3">
-                <h1>Activités à Marseille</h1>
+                <h2>Activités à Marseille</h2>
             </div>
-            <section class="cards2">
+            <div class="cards2">
                 <figure>
                     <img src="img/vieux_port.jpg" alt="">
                     <figcaption>
@@ -218,7 +223,7 @@
                         <p>Notre-Dame-de-la-Garde</p>                
                     </figcaption>
                 </figure>                
-            </section>
+            </div>
         </section>
     </main>
 
