--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>Filtres</p>
             <ul>
                 <li><i class="fa-sharp fa-solid fa-money-bill-wave"></i>Économique</li>
-                <li><i class="fa-sharp fa-solid fa-child-reaching"></i>Familial</li>
+                <li><i class="fa-solid fa-person"></i>Familial</li>
                 <li><i class="fa-sharp fa-solid fa-heart"></i>Romantique</li>
                 <li><i class="fa-sharp fa-solid fa-dog"></i>Animaux autorisés</li>
             </ul>
