--- a/index.html
+++ b/index.html
@@ -144,20 +144,21 @@
 
         <section class="blockpopulaire">
                 <div class="titre2">
-                    <h2>Les plus populaire</h2>
+                    <h2>Les plus populaire <i class="fa-solid fa-chart-line"></i></h2>
                 </div>
-                <i class="fa-solid fa-chart-line"></i>
                 <div class="cards1">
                     <figure>
                         <img src="img/le_soleil.jpg" alt="">
                         <figcaption>
                             <p>Hôtel Le soleil du matin</p>
                             <p>Nuit à partir de 128€</p>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>                
-                            <i class="fa-solid fa-star stargrey"></i>                
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star stargrey"></i> 
+                            </div>             
                         </figcaption>
                     </figure>
 
@@ -166,11 +167,13 @@
                         <figcaption>
                             <p>Chambres d'hôtes Au coeur de l'eau</p>
                             <p>Nuit à partir de 17€</p>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>                
-                            <i class="fa-solid fa-star stargrey"></i>                
+                            <div class="star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star stargrey"></i> 
+                            </div>                 
                         </figcaption>
                     </figure>
 
@@ -179,11 +182,13 @@
                         <figcaption>
                             <p>Hôtel Bleu et Blanc</p>
                             <p>Nuit à partir de 68€</p>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>                
-                            <i class="fa-solid fa-star stargrey"></i>                
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star stargrey"></i> 
+                            </div>                 
                         </figcaption>
                     </figure>
                 </div>
